# diffyinajiffy

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  build.sh  diffyinajiffy.desktop  validate.sh
examples/markdown/: doc1.md  doc2.md
examples/text/: version1.txt  version2.txt
src/: diffengine.cpp  diffengine.h  diffview.cpp  diffview.h  documentparser.cpp  documentparser.h  folderview.cpp  folderview.h  main.cpp  mainwindow.cpp  mainwindow.h
